# my-book-ocr

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/definition/const/: core.py  location.py
src/definition/enum/: markdown_syntax.py
src/definition/p_model/: md.py  ocr.py
src/log/: config.py
src/my_book_ocr/: __init__.py  main.py  openai_batch_service.py  pdf_to_jsonl_service.py
src/pipeline/flow/: openai_batch_flow.py  pdf_to_jsonl_flow.py  pdf_to_md.py
src/pipeline/task/: openai_batch.py  pdf_ocr.py  pdf_reader.py  pdf_to_jsonl.py  pdf_writer.py  receive_batch.py
