[project]
name = "my-book-ocr"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "jcfangc", email = "workinging.fang@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "commitizen>=4.4.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/my_book_ocr"]
