[project]
name = "my-book-ocr"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "jcfangc", email = "workinging.fang@gmail.com" }
]
dependencies = [
    "paddleocr>=2.10.0",
    "pymupdf>=1.25.5",
    "aiofile>=3.9.0",
    "pydantic>=2.11.2",
    "scikit-learn>=1.6.1",
    "loguru>=0.7.3",
    "paddlepaddle>=3.0.0",
    "setuptools>=78.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "commitizen>=4.4.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/my_book_ocr"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
