[project]
name = "my-book-ocr"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "jcfangc", email = "workinging.fang@gmail.com" }
]
dependencies = [
    "pymupdf>=1.25.5",
    "aiofile>=3.9.0",
    "pydantic>=2.11.2",
    "loguru>=0.7.3",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "openai>=1.70.0",
    "dotenv>=0.9.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "commitizen>=4.4.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/my_book_ocr"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
